Fix bad bugs concerning clearline bad argument
Better tests for scrup and srcdn
Addded type for line attributes TMTLINEATTRS

Signed-off-by: Kamil Cukrowski <kamilcukrowski@gmail.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,18 +1,33 @@
+#!/usr/bin/make
 
-CC=gcc
-CFLAGS=-Wall -I. -I.. -g3 -O3 -std=c99
-LDFLAGS=-lcheck
-mains = $(patsubst %-check.c, %-check.out, $(wildcard ./*-check.c)) main.out 
 define \n
 
 
 endef
 
+CC=gcc
+CFLAGS=-Wall -I. -I.. -g3 -O0 -std=c99
+LDFLAGS=-lcheck
+mains = $(patsubst %-check.c, %-check.out, $(wildcard ./*-check.c)) main.out 
+
+ifdef NDEBUG
+CFLAGS+=-g0
+endif
+ifdef OPTIMIZE
+CFLAGS+=-O3
+endif
+
 .PHONY: test 
+
 all: $(mains)
 
-%-check.c: %.check.c
-	checkmk $< > $@
+-include $(wildcard *.d) $(wildcard ../*.d)
+
+%.d: %.c %.h
+	$(CC) $(CFLAGS) -MM $*.c > $*.d
+
+%.o: %.c %.h %.d
+	$(CC) $(CFLAGS) -c -o $*.o $*.c
 
 %.out: callback.o %.o
 	gcc $(CFLAGS) $(LDFLAGS) -o $@ $^
@@ -20,8 +35,10 @@ all: $(mains)
 main.out: callback.o main.o ../tmt.o
 	gcc $(CFLAGS) $(LDFLAGS) -o $@ $^
 
+clean:
+	rm -f *.o *.d ../*.o ../*.d
+	rm -f *.out 
+
 test: $(mains)
 	$(foreach file, $?, ./$(file)${\n})
 
-distclean:
-	rm -f *.o ../tmt.o $(mains) 
