wcwidth is guarded by __USE_XOPEN
__USE_XOPEN is guarded by _XOPEN_SOURCE (see features.h)
_XOPEN_SOURCE should be defined by compiler

Signed-off-by: Kamil Cukrowski <kamilcukrowski@gmail.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -6,7 +6,7 @@ define \n
 endef
 
 CC=gcc
-CFLAGS=-Wall -I. -I.. -g3 -O0 -std=c99
+CFLAGS=-Wall -I. -I.. -g3 -O0 -std=c99 -D_XOPEN_SOURCE
 LDFLAGS=-lcheck
 mains = $(patsubst %-check.c, %-check.out, $(wildcard ./*-check.c)) main.out 
 
